swag for /admin/category endpoints
