# api/controllers/adminCategory.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"net/http"
+
 	"github.com/diana-gemini/ozinshe/db/initializers"
 	"github.com/diana-gemini/ozinshe/internal/models"
 	"github.com/diana-gemini/ozinshe/internal/validations"
@@ -9,26 +10,33 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type NewCategory struct {
+	CategoryName string `json:"categoryName" binding:"required,min=2" example:"Anime"`
+}
+
+// CreateCategory godoc
+// @Summary CreateCategory
+// @Security ApiKeyAuth
+// @Tags admin-category-controller
+// @ID create-category
+// @Accept  json
+// @Produce  json
+// @Param categoryName body NewCategory true "categoryName"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Failure default {object} ErrorResponse
+// @Router /admin/category/create [post]
 func CreateCategory(c *gin.Context) {
-	var userInput struct {
-		CategoryName string `json:"categoryName" binding:"required,min=2"`
-	}
+	var userInput NewCategory
 
 	if err := c.ShouldBindJSON(&userInput); err != nil {
-
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
-
+		NewErrorResponse(c, http.StatusBadRequest, "invalid input body")
 		return
 	}
 
 	if validations.IsUniqueValue("categories", "category_name", userInput.CategoryName) {
-		c.JSON(http.StatusConflict, gin.H{
-			"validations": map[string]interface{}{
-				"Name": "The category name is already exist!",
-			},
-		})
+		NewErrorResponse(c, http.StatusConflict, "the category name is already exist")
 		return
 	}
 
@@ -39,10 +47,7 @@ func CreateCategory(c *gin.Context) {
 	result := initializers.DB.Create(&category)
 
 	if result.Error != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": "Cannot create category",
-		})
-
+		NewErrorResponse(c, http.StatusInternalServerError, "cannot create category")
 		return
 	}
 
@@ -51,26 +56,61 @@ func CreateCategory(c *gin.Context) {
 	})
 }
 
+// EditCategory godoc
+// @Summary EditCategory
+// @Security ApiKeyAuth
+// @Tags admin-category-controller
+// @ID edit-category
+// @Accept  json
+// @Produce  json
+// @Param id path integer true "id"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Failure default {object} ErrorResponse
+// @Router /admin/category/{id}/edit [get]
+func EditCategory(c *gin.Context) {
+	id := c.Param("id")
+
+	var category models.Category
+	result := initializers.DB.First(&category, id)
+
+	if err := result.Error; err != nil {
+		NewErrorResponse(c, http.StatusNotFound, "category not found")
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"category": category,
+	})
+}
+
+// UpdateCategory godoc
+// @Summary UpdateCategory
+// @Security ApiKeyAuth
+// @Tags admin-category-controller
+// @ID update-category
+// @Accept  json
+// @Produce  json
+// @Param id path integer true "id"
+// @Param categoryName body NewCategory true "categoryName"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Failure default {object} ErrorResponse
+// @Router /admin/category/{id}/update [put]
 func UpdateCategory(c *gin.Context) {
 	id := c.Param("id")
 
-	var userInput struct {
-		CategoryName string `json:"categoryName" binding:"required,min=2"`
-	}
+	var userInput NewCategory
 
 	if err := c.ShouldBindJSON(&userInput); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": err.Error(),
-		})
+		NewErrorResponse(c, http.StatusBadRequest, "invalid input body")
 		return
 	}
 
 	if validations.IsUniqueValue("categories", "category_name", userInput.CategoryName) {
-		c.JSON(http.StatusConflict, gin.H{
-			"validations": map[string]interface{}{
-				"Name": "The category name is already exist!",
-			},
-		})
+		NewErrorResponse(c, http.StatusConflict, "the category name is already exist")
 		return
 	}
 
@@ -78,9 +118,7 @@ func UpdateCategory(c *gin.Context) {
 	result := initializers.DB.First(&category, id)
 
 	if err := result.Error; err != nil {
-		c.JSON(http.StatusNotFound, gin.H{
-			"error": err,
-		})
+		NewErrorResponse(c, http.StatusInternalServerError, "cannot find category")
 		return
 	}
 
@@ -91,9 +129,7 @@ func UpdateCategory(c *gin.Context) {
 	result = initializers.DB.Model(&category).Updates(&updateCategory)
 
 	if result.Error != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": "Cannot update category",
-		})
+		NewErrorResponse(c, http.StatusInternalServerError, "cannot update category")
 		return
 	}
 
@@ -102,23 +138,32 @@ func UpdateCategory(c *gin.Context) {
 	})
 }
 
+// DeleteCategory godoc
+// @Summary DeleteCategory
+// @Security ApiKeyAuth
+// @Tags admin-category-controller
+// @ID delete-category
+// @Accept  json
+// @Produce  json
+// @Param id path integer true "id"
+// @Success 200 {integer} integer 1
+// @Failure 400,404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Failure default {object} ErrorResponse
+// @Router /admin/category/{id}/delete [delete]
 func DeleteCategory(c *gin.Context) {
 	id := c.Param("id")
 	var category models.Category
 
 	result := initializers.DB.First(&category, id)
 	if err := result.Error; err != nil {
-		c.JSON(http.StatusNotFound, gin.H{
-			"error": err,
-		})
+		NewErrorResponse(c, http.StatusNotFound, "cannot find category")
 		return
 	}
 
 	err := initializers.DB.Delete(&category).Error
 	if err != nil {
-		c.JSON(http.StatusNotFound, gin.H{
-			"error": err,
-		})
+		NewErrorResponse(c, http.StatusNotFound, "cannot delete category")
 		return
 	}
 
